[project]
name = "cava-nlp"
version = "1.0"
description = "CaVa Platform Natural Language Processing spaCy components and pipeline"
readme = "README.md"

# note that once medspacy updates pysbd dependency 
# we can upgrade to spacy 3.8+ and numpy 2+ and python 3.12+
# but for now, pysbd is not compatible with python 3.12 
# regex escape sequences

requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==1.24.4",
    "medspacy==1.3.0",
    "striprtf==0.0.2",
    "python-dateutil==2.8.2",
    "dateparser>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json"]