[project]
name = "cava-nlp"
version = "0.8.3"
description = "CaVa Platform Natural Language Processing spaCy components and pipeline"
readme = "README.md"

# pysbd is is not compatible with python3.12 so even though it installs with 3.12, do not use the medspacy sentencizer with 3.12 at this time

requires-python = ">=3.11,<3.13"
dependencies = [
    "medspacy==1.3.0",
    "striprtf>=0.0.2",
    "python-dateutil==2.8.2",
    "dateparser>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "namespaces/*.json",
  "namespaces/**/*.json",
  "rule_engine/*.yaml",
  "rule_engine/**/*.yaml",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-section-index>=0.3",
  "mkdocs-autorefs>=1.0",
  "pymdown-extensions>=10.8",
  "mkdocs-mermaid2-plugin>=1.2",
]
